--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".StudentApplication"
         android:theme="@style/Theme.StudentDatabaseMVVM"
         tools:targetApi="31">
         <activity
